testResult.txt
(venv) [tiyi@coam-dev-add-7 MAS]$ python mas.py login -d /var/fpwork/tiyi/project/MAS/MAS/api/

=====================================
      MultiAgentSystem (MAS)
      AI Code Review Assistant
=====================================
Login successful at 2025-11-16 05:21:41
📂 目标目录: /var/fpwork/tiyi/project/MAS/MAS/api
Traceback (most recent call last):
  File "/var/fpwork/tiyi/project/MAS/MAS/mas.py", line 10, in <module>
    mas()
  File "/var/fpwork/tiyi/project/MAS/MAS/venv/lib64/python3.12/site-packages/click/core.py", line 1157, in __call__
    return self.main(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/fpwork/tiyi/project/MAS/MAS/venv/lib64/python3.12/site-packages/click/core.py", line 1078, in main
    rv = self.invoke(ctx)
         ^^^^^^^^^^^^^^^^
  File "/var/fpwork/tiyi/project/MAS/MAS/venv/lib64/python3.12/site-packages/click/core.py", line 1688, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/fpwork/tiyi/project/MAS/MAS/venv/lib64/python3.12/site-packages/click/core.py", line 1434, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/fpwork/tiyi/project/MAS/MAS/venv/lib64/python3.12/site-packages/click/core.py", line 783, in invoke
    return __callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/fpwork/tiyi/project/MAS/MAS/api/main.py", line 241, in login
    asyncio.run(_login_entry(target_dir))
  File "/usr/lib64/python3.12/asyncio/runners.py", line 194, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.12/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.12/asyncio/base_events.py", line 687, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/var/fpwork/tiyi/project/MAS/MAS/api/main.py", line 225, in _login_entry
    await _run_single_analysis_flow(target_dir)
  File "/var/fpwork/tiyi/project/MAS/MAS/api/main.py", line 146, in _run_single_analysis_flow
    agent_system = await _init_system()
                   ^^^^^^^^^^^^^^^^^^^^
  File "/var/fpwork/tiyi/project/MAS/MAS/api/main.py", line 38, in _init_system
    from core.agents_integration import get_agent_integration_system
  File "/var/fpwork/tiyi/project/MAS/MAS/core/__init__.py", line 7, in <module>
    from .agents_integration import AgentIntegration, get_agent_integration_system
  File "/var/fpwork/tiyi/project/MAS/MAS/core/agents_integration.py", line 26, in <module>
    from .agents import (
  File "/var/fpwork/tiyi/project/MAS/MAS/core/agents/__init__.py", line 13, in <module>
    from .ai_driven_security_agent import AIDrivenSecurityAgent
  File "/var/fpwork/tiyi/project/MAS/MAS/core/agents/ai_driven_security_agent.py", line 4
    from transformers                print(f"✅ 备用模型加载成功: {fallback_model}")
                                     ^^^^^
SyntaxError: invalid syntax
(venv) [tiyi@coam-dev-add-7 MAS]$ 